# ScreenReader

./: .editorconfig  .geminiignore  .gitignore  CMakeLists.txt  README.md  asan.supp  out
.github/workflows/: gemini-invoke.yml  gemini-plan-execute.yml  gemini-review.yml  gemini-triage.yml
Docs/: Architecture.md  TODO.md
Install/Linux/etc/udev/rules.d/: 99-mmadesr-input-access.rules
SRC/: Action.h  App.cppm  App.h  AppState.h  Cache.h  Config.h  Defer.h  Engine.cpp  Engine.h  EngineSpeechDispatcher.cpp  EngineSpeechDispatcher.h  Event.h  EventHandler.cpp  EventHandler.h  EventListener.h  EventListenerAtspi.cpp  EventListenerAtspi.h  EventToSpeech.cpp  EventToSpeech.h  FocusManager.h  KeyboardHandler.cpp  KeyboardHandler.h  Logger.h  Object.cpp  Object.h  ObjectAtspi.cpp  ObjectAtspi.cppm  ObjectAtspi.h  PlatformDependentWorker.h  PlatformDependentWorkerLinux.h  Rect.h  RefCountedObject.h  Singleton.h  SpeechEngine.cpp  SpeechEngine.h  Sral.hpp  Text.h  Version.h.in  main.cpp
SRC/Core/: Action.cppm  Action.h  App.cppm  App.h  AppState.cppm  AppState.h  Audio.cppm  AudioEnginePortAudio.cpp  AudioEnginePortAudio.cppm  AudioSystem.cpp  AudioSystem.cppm  CMakeLists.txt  Cache.h  CapabilityMeta.cppm  Config.cppm  Config.h  Defer.h  Device.cppm  Device.h  Encoding.cppm  EnumUtils.h  Environment.cppm  Environment.h  Event.cppm  Event.h  EventHandler.cpp  EventHandler.cppm  EventHandler.h  EventQueue.cppm  EventQueue.h  EventToSpeech.cpp  EventToSpeech.cppm  EventToSpeech.h  FocusManager.cppm  FocusManager.h  KeyInfo.cppm  KeyMeta.cppm  KeyboardHandler.cpp  KeyboardHandler.cppm  KeyboardHandler.h  (+46 more)
SRC/Core/Outputs/: CMakeLists.txt  Speech.cpp  Speech.cppm
SRC/Interfaces/: CMakeLists.txt  EventListener.h  Object.cpp  Object.h  PlatformDependentWorker.h  RefCountedObject.h
SRC/Proxies/: CMakeLists.txt  Object.cppm  Output.cppm
SRC/Traits/: ActionHandler.h  CMakeLists.txt  EventListener.cppm  EventListener.h  NoC  NonAtomicRefCountedObject.cppm  Object.cpp  Object.cppm  Object.h  PlatformDependentWorker.cppm  PlatformDependentWorker.h  RefCountedObject.cppm  RefCountedObject.h  SpeechEngine.cppm
Scripts/: asan.sh  fix-code.sh  install-linux.sh
